--- a/LAB/100_Numpy_exercises.ipynb
+++ b/LAB/100_Numpy_exercises.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "6c52078e",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "id": "023a2c52",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "id": "df54025a",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "5c5b0950",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "fcb1248a",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "id": "452df2a7",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "10847d11",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "34722e83",
    "metadata": {},
    "outputs": [
@@ -273,8 +273,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98016607 0.19518022 0.26676169 0.33348933 0.66614954]\n",
-      "Reverse v = [0.66614954 0.33348933 0.26676169 0.19518022 0.98016607]\n"
+      "[0.19141626 0.67040787 0.73677947 0.52932612 0.92385167]\n",
+      "Reverse v = [0.92385167 0.52932612 0.73677947 0.67040787 0.19141626]\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
    "id": "e18eef56",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 10,
    "id": "9a402d06",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "id": "e38459c2",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "id": "94752bb3",
    "metadata": {},
    "outputs": [
@@ -378,17 +378,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.87594568 0.2387418  0.35150055]\n",
-      "  [0.83494972 0.66467135 0.05955634]\n",
-      "  [0.59295928 0.2405445  0.5971882 ]]\n",
+      "[[[0.50743332 0.94586722 0.61138968]\n",
+      "  [0.31503523 0.04527109 0.53624599]\n",
+      "  [0.2721911  0.82631866 0.49473506]]\n",
       "\n",
-      " [[0.41763241 0.79408616 0.51370808]\n",
-      "  [0.26090215 0.06955394 0.39701992]\n",
-      "  [0.32726946 0.0174692  0.50111847]]\n",
+      " [[0.41546358 0.63037352 0.56811394]\n",
+      "  [0.10543205 0.00294178 0.04258314]\n",
+      "  [0.54349896 0.78424203 0.94273808]]\n",
       "\n",
-      " [[0.37491762 0.81120069 0.99246859]\n",
-      "  [0.51773498 0.96956076 0.37877556]\n",
-      "  [0.42935716 0.97662028 0.40202281]]]\n"
+      " [[0.77398013 0.57525926 0.23753832]\n",
+      "  [0.07005115 0.58483673 0.60522308]\n",
+      "  [0.43352955 0.02394891 0.68982507]]]\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "id": "c0643b1f",
    "metadata": {},
    "outputs": [
@@ -416,11 +416,11 @@
      "output_type": "stream",
      "text": [
       "Min & Max values of matrix \n",
-      "[[98 71 25 99 11]\n",
-      " [21 22 23 70 84]\n",
-      " [18 85 66  1 71]\n",
-      " [58 87 36 41  0]\n",
-      " [52  0 43 31  7]] = [0, 99]\n"
+      "[[ 3 79 60 38 53]\n",
+      " [76 24 29 31 20]\n",
+      " [ 5 17 56  3  9]\n",
+      " [30 13  4 63  2]\n",
+      " [58 56 76  8 84]] = [2, 84]\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "id": "e922a524",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean value of v = 0.5129450593941931\n"
+      "The mean value of v = 0.47169505181923344\n"
      ]
     }
    ],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "id": "6bc84dfe",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "id": "41e66e3e",
    "metadata": {},
    "outputs": [
@@ -512,9 +512,9 @@
      "output_type": "stream",
      "text": [
       "[[0.         0.         0.         0.         0.        ]\n",
-      " [0.         0.95869113 0.19261083 0.84224001 0.        ]\n",
-      " [0.         0.27312658 0.99953863 0.06251533 0.        ]\n",
-      " [0.         0.29631409 0.02621604 0.61762188 0.        ]\n",
+      " [0.         0.89522892 0.91828637 0.28525971 0.        ]\n",
+      " [0.         0.43349777 0.65529382 0.67109113 0.        ]\n",
+      " [0.         0.62800225 0.88972439 0.82823257 0.        ]\n",
       " [0.         0.         0.         0.         0.        ]]\n"
      ]
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "id": "7eb533d5",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 18,
    "id": "2b9fb59c",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 19,
    "id": "299f5e60",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 20,
    "id": "22888cc4",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 21,
    "id": "9cb81fe1",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 22,
    "id": "fcdc0459",
    "metadata": {},
    "outputs": [
@@ -721,11 +721,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.61341906 0.49134355 1.         0.49021667 0.20968781]\n",
-      " [0.25711176 0.06083414 0.26488303 0.25671869 0.50058616]\n",
-      " [0.25126392 0.69356766 0.49937469 0.13522284 0.10451919]\n",
-      " [0.33020069 0.00412068 0.63965965 0.04358371 0.9316377 ]\n",
-      " [0.59639868 0.         0.66775556 0.59184668 0.24708237]]\n"
+      "[[5.92452613e-01 0.00000000e+00 1.00000000e+00 6.32720309e-02\n",
+      "  3.91580092e-02]\n",
+      " [9.73772597e-01 7.77842539e-01 5.17129946e-01 1.54429682e-01\n",
+      "  4.28187488e-01]\n",
+      " [8.31196332e-01 2.00406162e-01 3.82391805e-01 8.24772186e-01\n",
+      "  8.56607910e-01]\n",
+      " [7.00593346e-01 2.35077801e-02 7.10070822e-01 8.05066287e-01\n",
+      "  8.10944322e-01]\n",
+      " [5.57786241e-01 9.13913874e-05 2.32826656e-01 3.97068218e-01\n",
+      "  5.73461877e-01]]\n"
      ]
     }
    ],
@@ -745,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 23,
    "id": "7445cb2d",
    "metadata": {},
    "outputs": [
@@ -772,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 24,
    "id": "ec8bd6da",
    "metadata": {},
    "outputs": [
@@ -780,11 +785,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.4124724  1.11793425]\n",
-      " [1.30906453 1.1932769 ]\n",
-      " [0.55815213 0.14728899]\n",
-      " [0.96793238 1.14004012]\n",
-      " [0.69976239 0.48687959]]\n"
+      "[[0.48773141 0.68617098]\n",
+      " [0.30191971 0.39846574]\n",
+      " [0.72155948 0.43468583]\n",
+      " [0.70352223 0.37242921]\n",
+      " [0.71887218 0.77383426]]\n"
      ]
     }
    ],
@@ -805,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 25,
    "id": "5b63b63b",
    "metadata": {},
    "outputs": [
@@ -840,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 26,
    "id": "52a34d3d",
    "metadata": {},
    "outputs": [],
@@ -867,11 +872,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "451181cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1   1   4  27 256]\n",
+      "[0 1 2 4 8]\n",
+      "[False False False False False]\n",
+      "[0.+0.j 0.+1.j 0.+2.j 0.+3.j 0.+4.j]\n",
+      "[0. 1. 2. 3. 4.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.arange(5)\n",
+    "print(v**v)\n",
+    "print(2 << v >> 2)\n",
+    "print(v < -v)\n",
+    "print(1j * v)\n",
+    "print(v / 1 / 1)\n",
+    "# this one ---> print(v < v > v)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -888,11 +913,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "52983a0b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "0\n",
+      "[0.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rj/6cfjbftj3tgcdt_v_3n95t_r0000gn/T/ipykernel_28453/3912170336.py:1: RuntimeWarning: invalid value encountered in divide\n",
+      "  print(np.array(0) / np.array(0))\n",
+      "/var/folders/rj/6cfjbftj3tgcdt_v_3n95t_r0000gn/T/ipykernel_28453/3912170336.py:2: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  print(np.array(0) // np.array(0))\n",
+      "/var/folders/rj/6cfjbftj3tgcdt_v_3n95t_r0000gn/T/ipykernel_28453/3912170336.py:3: RuntimeWarning: invalid value encountered in cast\n",
+      "  print(np.array([np.nan]).astype(int).astype(float))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.array(0) / np.array(0))\n",
+    "print(np.array(0) // np.array(0))\n",
+    "print(np.array([np.nan]).astype(int).astype(float))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -904,11 +955,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "4cce0af8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4. -8.  8.  4.  7. -6. -3.  9. -7.  7.]\n",
+      "[ 4. -8.  8.  4.  7. -6. -3.  9. -7.  7.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.uniform(-10, +10, 10)\n",
+    "print(np.copysign(np.ceil(np.abs(arr)), arr))\n",
+    "\n",
+    "# More readable but less efficient\n",
+    "print(np.where(arr > 0, np.ceil(arr), np.floor(arr)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -920,11 +986,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "27eff6b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr_a = np.random.randint(0, 10, 10)\n",
+    "arr_b = np.random.randint(0, 10, 10)\n",
+    "print(np.intersect1d(arr_a, arr_b))"
+   ]
   },
   {
    "cell_type": "markdown",
