--- a/LAB/100_Numpy_exercises.ipynb
+++ b/LAB/100_Numpy_exercises.ipynb
@@ -1018,7 +1018,18 @@
    "id": "1bdde6e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Suicide mode on\n",
+    "# defaults = np.seterr(all=\"ignore\")\n",
+    "# Z = np.ones(1) / 0\n",
+    "\n",
+    "# Back to sanity\n",
+    "# _ = np.seterr(**defaults)\n",
+    "\n",
+    "# Equivalently with a context manager\n",
+    "# with np.errstate(all=\"ignore\"):\n",
+    "#     np.arange(3) / 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1033,11 +1044,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d8673bdf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rj/6cfjbftj3tgcdt_v_3n95t_r0000gn/T/ipykernel_53366/2770867030.py:1: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  print(np.sqrt(-1) == np.emath.sqrt(-1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sqrt(-1) == np.emath.sqrt(-1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1049,11 +1078,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f33f9cc2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-03-08 2025-03-09 2025-03-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "yesterday = np.datetime64('today') - np.timedelta64(1)\n",
+    "today     = np.datetime64('today')\n",
+    "tomorrow  = np.datetime64('today') + np.timedelta64(1)\n",
+    "print(yesterday, today, today)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1065,11 +1107,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3927a8e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2016-07-01' '2016-07-02' '2016-07-03' '2016-07-04' '2016-07-05'\n",
+      " '2016-07-06' '2016-07-07' '2016-07-08' '2016-07-09' '2016-07-10'\n",
+      " '2016-07-11' '2016-07-12' '2016-07-13' '2016-07-14' '2016-07-15'\n",
+      " '2016-07-16' '2016-07-17' '2016-07-18' '2016-07-19' '2016-07-20'\n",
+      " '2016-07-21' '2016-07-22' '2016-07-23' '2016-07-24' '2016-07-25'\n",
+      " '2016-07-26' '2016-07-27' '2016-07-28' '2016-07-29' '2016-07-30'\n",
+      " '2016-07-31']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dates = np.arange('2016-07', '2016-08', dtype='datetime64[D]')\n",
+    "print(dates)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1081,11 +1140,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3c2f59ac",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2.] [5. 6. 7.]\n",
+      "[-0.  -3.5 -9. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.arange(3, dtype='float')\n",
+    "B = np.arange(5,8, dtype='float')\n",
+    "print(A, B)\n",
+    "np.add(A, B, out=B)\n",
+    "np.divide(A, 2, out=A)\n",
+    "np.negative(A, out=A)\n",
+    "np.multiply(A, B, out=A)\n",
+    "print(A)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1100,8 +1177,30 @@
    "execution_count": null,
    "id": "8b7d2937",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.20421957 0.51900086 8.75012931 3.94679786 5.86261876]\n",
+      "[4. 0. 8. 3. 5.]\n",
+      "[4. 0. 8. 3. 5.]\n",
+      "[4. 0. 8. 3. 5.]\n",
+      "[4. 0. 8. 3. 5.]\n",
+      "[4 0 8 3 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.random(5) * 10\n",
+    "\n",
+    "print(arr)\n",
+    "print(arr // 1) # 1\n",
+    "print(np.floor(arr)) # 2\n",
+    "print(arr - arr%1) # 3\n",
+    "print(np.trunc(arr)) # 4\n",
+    "print(arr.astype(int)) # 5\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1113,11 +1212,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "63c75db0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]\n",
+      " [0 1 2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = np.tile(np.arange(5), (5, 1))\n",
+    "print(mat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1129,11 +1243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "f6aefd94",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generator():\n",
+    "    for i in range(10):\n",
+    "        yield i\n",
+    "arr = np.fromiter(generator(), dtype='float', count=-1)\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1145,11 +1273,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "a27cd904",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.22977096 0.83591239 0.70353688 0.39898746 0.84698468 0.28023561\n",
+      " 0.87291542 0.43179664 0.30584444 0.87158499]\n",
+      "[0.09090909 0.18181818 0.27272727 0.36363636 0.45454545 0.54545455\n",
+      " 0.63636364 0.72727273 0.81818182 0.90909091]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.random.random(10)\n",
+    "print(v)\n",
+    "\n",
+    "# or\n",
+    "\n",
+    "v1 = np.linspace(0,1,11,endpoint=False)[1:]\n",
+    "print(v1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1161,11 +1308,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "6ae5eb58",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.74529308 1.64509425 3.54936112 0.52093748 6.70366105 5.03363688\n",
+      " 5.74680982 3.47580875 7.34358902 5.62314336]\n",
+      "Sorted v = [0.52093748 1.64509425 3.47580875 3.54936112 5.03363688 5.62314336\n",
+      " 5.74680982 6.70366105 6.74529308 7.34358902]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.random.random(10) * 10\n",
+    "print(v)\n",
+    "v.sort()\n",
+    "print(f\"Sorted v = {v}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1177,11 +1340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "88790af3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.add.reduce(np.arange(5))\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1196,8 +1370,30 @@
    "execution_count": null,
    "id": "ca6dd579",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failure\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10000):\n",
+    "    A = np.random.randint(1, 10, 5)\n",
+    "    B = np.random.randint(1, 10, 5)\n",
+    "\n",
+    "    eq = np.allclose(A, B) # np.array_equal(A, B) no tolerance\n",
+    "    if eq:\n",
+    "        print(f\"{i} --> {eq}\")\n",
+    "        print(A, B)\n",
+    "        print(\"Success\")\n",
+    "        break\n",
+    "\n",
+    "    if i + 1 == 10000:\n",
+    "        print(\"Failure\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1212,8 +1408,24 @@
    "execution_count": null,
    "id": "cbbb8917",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "assignment destination is read-only",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[151]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m arr = np.arange(\u001b[32m10\u001b[39m)\n\u001b[32m      2\u001b[39m arr.flags.writeable = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m]\u001b[49m = \u001b[32m2\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: assignment destination is read-only"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(10)\n",
+    "arr.flags.writeable = False\n",
+    "arr[2] = 2 # ValueError: assignment destination is read-only"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1225,11 +1437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "a89969af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R = [0.78482248 0.41317028 0.16613528 0.74391076 0.58195125 0.61423257\n",
+      " 0.34993648 1.26804068 1.12150952 0.82364783]\n",
+      "T = [1.36714817 0.57752875 1.20123494 0.50945085 1.23767532 0.50735034\n",
+      " 0.13130735 0.84241424 0.97902823 0.45876283]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = np.random.random((10, 2))\n",
+    "X, Y = mat[:, 0], mat[:, 1]\n",
+    "R = np.sqrt(X**2 + Y**2)\n",
+    "T = np.arctan2(Y, X)\n",
+    "print(f\"R = {R}\\nT = {T}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1241,11 +1470,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "8403a440",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1178 1833  860  223 1517  551  159  534 1369   61]\n",
+      "[1178    0  860  223 1517  551  159  534 1369   61]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.random.randint(20, 2000, 10)\n",
+    "print(v)\n",
+    "v[v.argmax()] = 0\n",
+    "print(v)"
+   ]
   },
   {
    "cell_type": "markdown",
