--- a/LAB/Lab02/bayes.ipynb
+++ b/LAB/Lab02/bayes.ipynb
@@ -152,7 +152,6 @@
         "        # global_std_dev = np.stack(_pixel_std_given_class).mean(axis=0)\n",
         "        # _pixel_vars_given_class = np.stack(_pixel_vars_given_class)\n",
         "\n",
-        "\n",
         "        yclass, counts = np.unique(Y, return_counts=True)\n",
         "\n",
         "        self._classes = yclass\n",
@@ -181,42 +180,26 @@
         "            model predictions over X. Has shape (n_test_samples,)\n",
         "        \"\"\"\n",
         "\n",
-        "\n",
-        "        # log_prob\n",
-        "        \n",
         "        n_test_images = X.shape[0]\n",
+        "        num_pixels_per_image = X.shape[1]\n",
         "\n",
-        "        X = X.reshape((n_test_images, -1))\n",
         "        results = np.zeros((n_test_images, self._n_classes))\n",
         "\n",
+        "        mask_one = X == 1.0\n",
+        "        mask_zero = X == 0.0\n",
+        "\n",
         "        for i in range(self._n_classes):\n",
-        "            # compute log P(X|y=i)\n",
         "            model_of_i = self._pixel_probs_given_class[i]\n",
-        "            model_of_i = model_of_i.reshape(\n",
-        "                (1, model_of_i.shape[0] * model_of_i.shape[1])\n",
-        "            )\n",
-        "            # mean = self._pixel_means_given_class[i]\n",
-        "            # std = self._pixel_std_given_class[i]\n",
+        "            model_of_i = model_of_i.reshape((1, num_pixels_per_image))\n",
         "\n",
-        "            # compute gaussian log likelihood\n",
-        "            # P = 1 / (np.sqrt(2 * np.pi) * std) * np.exp(-0.5 * ((X - mean) / std) ** 2)\n",
-        "            # P = np.exp(-0.5 * ((X - mean) / std) ** 2) # 1 / (np.sqrt(2 * np.pi) * std)  doesn't change the argmax\n",
-        "            # log_probs = np.log(P + self._eps)\n",
-        "            # log_probs = np.sum(log_probs, axis=1)\n",
+        "            pixel_likelihoods = mask_one * model_of_i + mask_zero * (1.0 - model_of_i)\n",
+        "            pixel_likelihoods_log = np.log(pixel_likelihoods + self._eps)\n",
+        "            class_likelihoods_log = np.sum(pixel_likelihoods_log, axis=1)\n",
         "\n",
-        "            # LDA\n",
+        "            class_prior_log = np.log(self._class_priors[i])\n",
         "\n",
-        "            \n",
-        "\n",
-        "            mask_one = X == 1.0\n",
-        "            mask_zero = X == 0.0\n",
-        "\n",
-        "            probs = mask_one * model_of_i + mask_zero * (1.0 - model_of_i)\n",
-        "            probs = np.log(probs + self._eps)\n",
-        "            probs = np.sum(probs, axis=1)\n",
-        "\n",
-        "            probs += np.log(self._class_priors[i])\n",
-        "            results[:, i] = probs\n",
+        "            final_log_score = class_likelihoods_log + class_prior_log\n",
+        "            results[:, i] = final_log_score\n",
         "\n",
         "        if not return_pred:\n",
         "            return np.argmax(results, axis=1)\n",
@@ -429,105 +412,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "3iigFMnshb3u"
-      },
-      "outputs": [],
-      "source": [
-        "from IPython.display import HTML, Image\n",
-        "# from google.colab.output import eval_js\n",
-        "from base64 import b64decode\n",
-        "import io\n",
-        "from PIL import Image as PILimage\n",
-        "\n",
-        "canvas_html = \"\"\"\n",
-        "<canvas width=256 height=256></canvas>\n",
-        "<button>Finish</button>\n",
-        "<script>\n",
-        "var canvas = document.querySelector('canvas')\n",
-        "var ctx = canvas.getContext('2d')\n",
-        "ctx.strokeStyle = \"#FFFFFF\"\n",
-        "ctx.fillStyle = \"#000000\";\n",
-        "ctx.fillRect(0, 0, 256, 256)\n",
-        "ctx.lineWidth = %d\n",
-        "var button = document.querySelector('button')\n",
-        "var mouse = {x: 0, y: 0}\n",
-        "\n",
-        "canvas.addEventListener('mousemove', function(e) {\n",
-        "  mouse.x = e.pageX - this.offsetLeft\n",
-        "  mouse.y = e.pageY - this.offsetTop\n",
-        "})\n",
-        "canvas.onmousedown = ()=>{\n",
-        "  ctx.beginPath()\n",
-        "  ctx.moveTo(mouse.x, mouse.y)\n",
-        "  canvas.addEventListener('mousemove', onPaint)\n",
-        "}\n",
-        "canvas.onmouseup = ()=>{\n",
-        "  canvas.removeEventListener('mousemove', onPaint)\n",
-        "}\n",
-        "var onPaint = ()=>{\n",
-        "  ctx.lineTo(mouse.x, mouse.y)\n",
-        "  ctx.stroke()\n",
-        "}\n",
-        "\n",
-        "var data = new Promise(resolve=>{\n",
-        "  button.onclick = ()=>{\n",
-        "    resolve(canvas.toDataURL('image/png'))\n",
-        "  }\n",
-        "})\n",
-        "</script>\n",
-        "\"\"\"\n",
-        "\n",
-        "def draw(filename='drawing.png', line_width=5, centercrop=True):\n",
-        "  display(HTML(canvas_html % (line_width, )))\n",
-        "  data = eval_js(\"data\")\n",
-        "  binary = b64decode(data.split(',')[1])\n",
-        "  buf = io.BytesIO(binary)\n",
-        "  img = PILimage.open(buf)\n",
-        "  img = img.resize((28, 28), PILimage.BILINEAR)\n",
-        "  img = img.convert('LA')\n",
-        "  img = np.array(img)[:, :, 0]\n",
-        "  img = img > 75\n",
-        "\n",
-        "  coords = np.argwhere(img)\n",
-        "  x_min, y_min = coords.min(axis=0)\n",
-        "  x_max, y_max = coords.max(axis=0)\n",
-        "  cropped = img[x_min:x_max+1, y_min:y_max+1]\n",
-        "\n",
-        "  out_img = np.zeros((28,28))\n",
-        "\n",
-        "  delta_x, delta_y = (28 - cropped.shape[0]) // 2, (28 - cropped.shape[1]) // 2\n",
-        "  out_img[delta_x:delta_x + cropped.shape[0], delta_y :delta_y + + cropped.shape[1]] = cropped\n",
-        "\n",
-        "  return out_img.astype(np.float32)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "rGhCAuM1k5aR"
-      },
-      "outputs": [],
-      "source": [
-        "img = draw(line_width=10)\n",
-        "print(img.shape, img.dtype, np.unique(img))\n",
-        "plt.imshow(img, cmap='Greys_r')\n",
-        "\n",
-        "pred, negllk = nbc.predict(img.reshape(1, 28*28), True)\n",
-        "classes_ord = np.arange(len(np.unique(y_test)))[np.argsort(negllk)]\n",
-        "classes_ord = np.flip(classes_ord)\n",
-        "print(f'Predicted - {pred}')\n",
-        "print(f'Scores: {negllk}')\n",
-        "print(f'Classes ordered by scores: {classes_ord}')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7GGqtBQUrYHN"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
